Fixed autocomplete overlap inputs

--- a/BForms.Docs/Scripts/BForms/Stylesheets/bforms.core.scss
+++ b/BForms.Docs/Scripts/BForms/Stylesheets/bforms.core.scss
@@ -356,7 +356,7 @@ mark, .mark {
 	width: 100%;
 	font-size: 14px;
 	.tt-hint {
-		padding: 8px;
+		padding: 11px;
 		height: 34px;
 		width: 100%;
 	}
